Fixed LittleStep notch overlap.

--- a/little-ide/src/main/webapp/VAADIN/themes/littletheme/littletheme.scss
+++ b/little-ide/src/main/webapp/VAADIN/themes/littletheme/littletheme.scss
@@ -36,14 +36,6 @@
   /* Steps */
   .l-step-list {
   }
-
-  .l-step {
-  /*
-  	height: 20px;
-  	min-width: 200px;
-  	background-color: blue;
-  */ 
-  }
   
   .l-step-empty {
     height: 10px;
